--- a/package.json
+++ b/package.json
@@ -41,5 +41,11 @@
   "homepage": "https://github.com/AnshSinghSonkhia/log-mate#readme",
   "devDependencies": {
     "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "axios": "^1.8.4",
+    "crypto": "^1.0.1",
+    "fs": "^0.0.1-security",
+    "mysql2": "^3.14.0"
   }
 }
