--- a/package.json
+++ b/package.json
@@ -40,12 +40,19 @@
   },
   "homepage": "https://github.com/AnshSinghSonkhia/log-mate#readme",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "mock-fs": "^5.5.0"
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "commander": "^13.1.0",
     "crypto": "^1.0.1",
     "fs": "^0.0.1-security",
-    "mysql2": "^3.14.0"
+    "fs-extra": "^11.3.0",
+    "lodash": "^4.17.21",
+    "mysql2": "^3.14.0",
+    "readline": "^1.3.0",
+    "winston": "^3.17.0",
+    "ws": "^8.18.1"
   }
 }
